Introduces resource permissions for detectors (#1400)
* Introduces resource sharing model as a feature flag

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Introduces resource sharing model as a feature flag

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Updates build.gradle

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Updates method signature to conform to client

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Resolves jar hell

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Updates gradle dependency and conforms to changes in client

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Upgrades qualifier to beta1

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Updates to security SPI changes

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Registers forecaster as resource

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Consumes feature flag exposed by SPI

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Aligns with main

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Adds changelog entry

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Adds todo to remove feature flag once feature is GA

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Addresses PR comments

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Adds filterByBackendRole control to resource sharing feature

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Fixes a compilation and a runtime bug

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Fix getName

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Skips verification of permission on creation

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Conforms to SPI changes

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Conforms to SPI changes in security plugin

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Address PR comments

Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

* Reflects changes in SPI

Signed-of